<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ConfigActivity">
    <data>
        <variable name="AlertConfigVM" type="com.globe3.tno.globe3_tms_conf.ViewModel.AlertConfigViewModel"/>
    </data>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingTop="8dp"
            android:paddingRight="16dp"
            android:paddingBottom="4dp">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_external"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:text="@{AlertConfigVM.externalConnection}"
                    android:textColor="@{AlertConfigVM.externalFontColor}"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_internal"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:text="@{AlertConfigVM.internalConnection}"
                    android:textColor="@{AlertConfigVM.internalFontColor}"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_mac_address"
                    android:visibility="@{AlertConfigVM.macAddressPromptVisibility}"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:text="@{AlertConfigVM.macAddressValidation}"
                    android:textColor="@{AlertConfigVM.macAddressFontColor}"
                    android:visibility="@{AlertConfigVM.macAddressPromptVisibility}"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:layout_gravity="right"
                android:text="@string/label_cancel"
                android:textColor="@color/colorFontCommon"
                android:onClick="@{AlertConfigVM.alertConfigHandler::dismissDialog}"
                style="@style/Widget.AppCompat.Button.Borderless.Colored" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:layout_gravity="right"
                android:text="@string/label_save"
                android:onClick="@{AlertConfigVM.alertConfigHandler::saveConfig}"
                android:visibility="@{AlertConfigVM.saveVisibility}"
                style="@style/Widget.AppCompat.Button.Borderless.Colored" />
        </LinearLayout>

    </LinearLayout>
</layout>