<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.globe3.tno.globe3_tms_conf.LoginActivity">
    <data>
        <variable name="LoginVM" type="com.globe3.tno.globe3_tms_conf.ViewModel.LoginViewModel"/>
    </data>
    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <LinearLayout
            android:id="@+id/layoutWrapper"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|center_vertical">
            <LinearLayout
                android:id="@+id/layoutHeader"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/logo_globe3"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <!-- Credentials -->
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint=" ">
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="0dp"
                            android:singleLine="true"
                            android:textColorHint="@color/colorHint"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:text="@={LoginVM.company}"
                            android:hint="@string/hint_company">
                            <requestFocus />
                            </EditText>
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint=" ">
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="0dp"
                            android:singleLine="true"
                            android:textColorHint="@color/colorHint"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:text="@={LoginVM.userid}"
                            android:hint="@string/hint_userid" />
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint=" ">
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="0dp"
                            android:singleLine="true"
                            android:inputType="textPassword"
                            android:textColorHint="@color/colorHint"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:text="@={LoginVM.password}"
                            android:hint="@string/hint_password" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
            </LinearLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:padding="16dp"
                android:textSize="24sp"
                android:text="@string/label_login"
                android:textAllCaps="true"
                android:onClick="@{LoginVM.loginHandler::authenticate}"
                style="@style/Widget.AppCompat.Button.Colored"/>
        </LinearLayout>
    </RelativeLayout>
</layout>
