<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ConfigActivity">

    <data>

        <variable
            name="ConfigVM"
            type="com.globe3.tno.globe3_tms_conf.ViewModel.ConfigViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <Button
            android:id="@+id/bt_save"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:onClick="@{ConfigVM.configHandler::validateConfig}"
            android:padding="16dp"
            android:text="@string/label_save"
            android:textAllCaps="true"
            android:textSize="24sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/bt_save">

            <LinearLayout
                android:id="@+id/ll_main_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/logo_globe3" />
                </LinearLayout>
                <!-- Credentials -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint=" ">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_masterfn"
                            android:paddingTop="0dp"
                            android:singleLine="true"
                            android:text="@={ConfigVM.masterfn}"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textColorHint="@color/colorHint" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint=" ">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_company"
                            android:paddingTop="0dp"
                            android:singleLine="true"
                            android:text="@={ConfigVM.company}"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textColorHint="@color/colorHint" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint=" ">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_userid"
                            android:paddingTop="0dp"
                            android:singleLine="true"
                            android:text="@={ConfigVM.userid}"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textColorHint="@color/colorHint" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint=" ">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_password"
                            android:inputType="textPassword"
                            android:paddingTop="0dp"
                            android:singleLine="true"
                            android:text="@={ConfigVM.password}"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textColorHint="@color/colorHint" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint=" ">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_data_source"
                            android:paddingTop="0dp"
                            android:singleLine="true"
                            android:text="@={ConfigVM.datasource}"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textColorHint="@color/colorHint" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
                <!-- External Server -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="left"
                        android:paddingTop="16dp"
                        android:text="@string/label_external_server"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/colorAccent" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="0.1"
                            android:checked="@={ConfigVM.externalURLMode}"
                            android:onClick="@{ConfigVM.configHandler::enableExtUrl}" />

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.9"
                            android:hint=" ">

                            <EditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:enabled="@{ConfigVM.externalURLMode}"
                                android:hint="@string/hint_url"
                                android:paddingTop="0dp"
                                android:singleLine="true"
                                android:text="@={ConfigVM.externalURL}"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:textColorHint="@color/colorHint" />
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="1.10">

                        <RadioButton
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="0.1"
                            android:checked="@={ConfigVM.externalIPMode}"
                            android:onClick="@{ConfigVM.configHandler::enableExtIp}" />

                        <include
                            bind:IPAddress="@={ConfigVM.externalIP}"
                            layout="@layout/input_ipaddress" />
                    </LinearLayout>
                </LinearLayout>
                <!-- Internal Server -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="left"
                        android:paddingTop="16dp"
                        android:text="@string/label_internal_server"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/colorAccent" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_internal_server"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="0.1"
                            android:checked="@={ConfigVM.internalURLMode}"
                            android:onClick="@{ConfigVM.configHandler::enableIntUrl}" />

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.9"
                            android:hint=" ">

                            <EditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:enabled="@{ConfigVM.internalURLMode}"
                                android:hint="@string/hint_url"
                                android:paddingTop="0dp"
                                android:singleLine="true"
                                android:text="@={ConfigVM.internalURL}"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:textColorHint="@color/colorHint" />
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="1.10">

                        <RadioButton
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="0.1"
                            android:checked="@={ConfigVM.internalIPMode}"
                            android:onClick="@{ConfigVM.configHandler::enableIntIp}" />

                        <include
                            bind:IPAddress="@={ConfigVM.internalIP}"
                            layout="@layout/input_ipaddress" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_check_deletion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ll_internal_server"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:onClick="@{ConfigVM.configHandler::checkDeletion}"
                    android:orientation="horizontal">

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="@={ConfigVM.isChecked}"
                        android:clickable="false" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:text="@string/label_deletion" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</layout>
